--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -109,8 +109,7 @@
     "humidity = city_data_df['Humidity']\n",
     "\n",
     "# Add Heatmap layer to map\n",
-    "fig = gmaps.figure()\n",
-    "fig"
+    "fig = gmaps.figure()"
    ]
   },
   {
