--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmaps.configure(api_key=g_key)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +75,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>City</th>\n      <th>Latitude</th>\n      <th>Longitude</th>\n      <th>Max Temp</th>\n      <th>Humidity</th>\n      <th>Cloudiness</th>\n      <th>Wind Speed</th>\n      <th>Country</th>\n      <th>Date</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Tasiilaq</td>\n      <td>65.61</td>\n      <td>-37.64</td>\n      <td>20.70</td>\n      <td>96</td>\n      <td>100</td>\n      <td>6.64</td>\n      <td>GL</td>\n      <td>1605397932</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Qaanaaq</td>\n      <td>77.48</td>\n      <td>-69.36</td>\n      <td>7.52</td>\n      <td>80</td>\n      <td>93</td>\n      <td>13.62</td>\n      <td>GL</td>\n      <td>1605397932</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Ushuaia</td>\n      <td>-54.80</td>\n      <td>-68.30</td>\n      <td>42.80</td>\n      <td>79</td>\n      <td>75</td>\n      <td>9.37</td>\n      <td>AR</td>\n      <td>1605397932</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Saskylakh</td>\n      <td>71.92</td>\n      <td>114.08</td>\n      <td>3.33</td>\n      <td>92</td>\n      <td>89</td>\n      <td>14.99</td>\n      <td>RU</td>\n      <td>1605397933</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Norman Wells</td>\n      <td>65.28</td>\n      <td>-126.83</td>\n      <td>-5.80</td>\n      <td>83</td>\n      <td>75</td>\n      <td>2.24</td>\n      <td>CA</td>\n      <td>1605397867</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 36
     }
    ],
    "source": [
@@ -87,17 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": "Figure(layout=FigureLayout(height='420px'))",
+      "text/plain": "Figure(layout=FigureLayout(border='1px solid black', height='420px', margin='0 auto 0 auto', width='1200px'))",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "615a2f3eb57d47adb89507aaa557e7ea"
+       "model_id": "55bdc5ee4211458896f3a75ff9de4105"
       }
      },
      "metadata": {}
@@ -109,7 +118,14 @@
     "humidity = city_data_df['Humidity']\n",
     "\n",
     "# Add Heatmap layer to map\n",
-    "fig = gmaps.figure()"
+    "figure_layout = {'width': '1200px',\n",
+    "    'border': '1px solid black',\n",
+    "    'margin': '0 auto 0 auto'}\n",
+    "fig = gmaps.figure(layout=figure_layout)\n",
+    "heatmap_layer = gmaps.heatmap_layer(locations, weights=humidity, max_intensity=100, dissipating=False, point_radius=1)\n",
+    "fig.add_layer(heatmap_layer)\n",
+    "#fig.savefig(\"/Images/heat_map.png\")\n",
+    "fig"
    ]
   },
   {
@@ -118,15 +134,62 @@
    "source": [
     "### Create new DataFrame fitting weather criteria\n",
     "* Narrow down the cities to fit weather conditions.\n",
-    "* Drop any rows will null values."
+    "* Drop any rows will null values.\n",
+    "* Narrow down the DataFrame to find your ideal weather condition. For example:\n",
+    "* A max temperature lower than 85 degrees but higher than 70.\n",
+    "* Wind speed less than 15 mph.\n",
+    "* 30% cloudiness."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                  City  Latitude  Longitude  Max Temp  Humidity  Cloudiness  \\\n",
+       "0        San Policarpo     12.18     125.51     82.74        81          22   \n",
+       "1                 Hilo     19.73    -155.09     78.80        65           1   \n",
+       "2   Acapulco de Juárez     16.86     -99.89     84.20        74          20   \n",
+       "3              Korhogo      9.45      -5.63     72.34        37           2   \n",
+       "4         Puerto Ayora     -0.74     -90.35     70.00        82          27   \n",
+       "..                 ...       ...        ...       ...       ...         ...   \n",
+       "64               Kidal     18.44       1.41     70.83        23           0   \n",
+       "65         Wagga Wagga    -35.12     147.37     73.40        46           0   \n",
+       "66           Abu Dhabi     24.47      54.37     77.00        61           0   \n",
+       "67                Jati     24.35      68.27     71.22        69           0   \n",
+       "68               Umluj     25.02      37.27     73.51        67           0   \n",
+       "\n",
+       "    Wind Speed Country        Date  \n",
+       "0        10.36      PH  1605397936  \n",
+       "1         6.93      US  1605397747  \n",
+       "2         6.93      MX  1605397754  \n",
+       "3         1.16      CI  1605397984  \n",
+       "4         7.00      EC  1605398001  \n",
+       "..         ...     ...         ...  \n",
+       "64       10.76      ML  1605398206  \n",
+       "65       10.29      AU  1605398206  \n",
+       "66        6.93      AE  1605398161  \n",
+       "67        7.45      PK  1605398209  \n",
+       "68        3.80      SA  1605398211  \n",
+       "\n",
+       "[69 rows x 9 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>City</th>\n      <th>Latitude</th>\n      <th>Longitude</th>\n      <th>Max Temp</th>\n      <th>Humidity</th>\n      <th>Cloudiness</th>\n      <th>Wind Speed</th>\n      <th>Country</th>\n      <th>Date</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>San Policarpo</td>\n      <td>12.18</td>\n      <td>125.51</td>\n      <td>82.74</td>\n      <td>81</td>\n      <td>22</td>\n      <td>10.36</td>\n      <td>PH</td>\n      <td>1605397936</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Hilo</td>\n      <td>19.73</td>\n      <td>-155.09</td>\n      <td>78.80</td>\n      <td>65</td>\n      <td>1</td>\n      <td>6.93</td>\n      <td>US</td>\n      <td>1605397747</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Acapulco de Juárez</td>\n      <td>16.86</td>\n      <td>-99.89</td>\n      <td>84.20</td>\n      <td>74</td>\n      <td>20</td>\n      <td>6.93</td>\n      <td>MX</td>\n      <td>1605397754</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Korhogo</td>\n      <td>9.45</td>\n      <td>-5.63</td>\n      <td>72.34</td>\n      <td>37</td>\n      <td>2</td>\n      <td>1.16</td>\n      <td>CI</td>\n      <td>1605397984</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Puerto Ayora</td>\n      <td>-0.74</td>\n      <td>-90.35</td>\n      <td>70.00</td>\n      <td>82</td>\n      <td>27</td>\n      <td>7.00</td>\n      <td>EC</td>\n      <td>1605398001</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>64</th>\n      <td>Kidal</td>\n      <td>18.44</td>\n      <td>1.41</td>\n      <td>70.83</td>\n      <td>23</td>\n      <td>0</td>\n      <td>10.76</td>\n      <td>ML</td>\n      <td>1605398206</td>\n    </tr>\n    <tr>\n      <th>65</th>\n      <td>Wagga Wagga</td>\n      <td>-35.12</td>\n      <td>147.37</td>\n      <td>73.40</td>\n      <td>46</td>\n      <td>0</td>\n      <td>10.29</td>\n      <td>AU</td>\n      <td>1605398206</td>\n    </tr>\n    <tr>\n      <th>66</th>\n      <td>Abu Dhabi</td>\n      <td>24.47</td>\n      <td>54.37</td>\n      <td>77.00</td>\n      <td>61</td>\n      <td>0</td>\n      <td>6.93</td>\n      <td>AE</td>\n      <td>1605398161</td>\n    </tr>\n    <tr>\n      <th>67</th>\n      <td>Jati</td>\n      <td>24.35</td>\n      <td>68.27</td>\n      <td>71.22</td>\n      <td>69</td>\n      <td>0</td>\n      <td>7.45</td>\n      <td>PK</td>\n      <td>1605398209</td>\n    </tr>\n    <tr>\n      <th>68</th>\n      <td>Umluj</td>\n      <td>25.02</td>\n      <td>37.27</td>\n      <td>73.51</td>\n      <td>67</td>\n      <td>0</td>\n      <td>3.80</td>\n      <td>SA</td>\n      <td>1605398211</td>\n    </tr>\n  </tbody>\n</table>\n<p>69 rows × 9 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 87
+    }
+   ],
+   "source": [
+    "new_city_data = city_data_df.loc[(city_data_df['Max Temp'] >= 70) & (city_data_df['Max Temp'] <= 85) & (city_data_df['Wind Speed'] < 15) & (city_data_df['Cloudiness'] <= 30)]\n",
+    "new_city_data_df = new_city_data.reset_index()\n",
+    "del new_city_data_df['index']\n",
+    "new_city_data_df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,9 +220,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'hotel_df' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-38-464b2b3e63ad>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;31m# Store the DataFrame Row\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;31m# NOTE: be sure to update with your DataFrame name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mhotel_info\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0minfo_box_template\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mhotel_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[0mlocations\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhotel_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Lat\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Lng\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'hotel_df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# NOTE: Do not change any of the code in this cell\n",
     "\n",
